package com.malak;

public enum DeliveryType {
    SHIPPABLE,
    EMAILABLE,
    NONE
}
