package com.malak;

public interface Emailable {
    String getTitle();
    String getFileType();
}
