package com.malak;

public interface Shippable {
    String getName();
    double getWeight();
}
